error.txt
hw3\Deep.java:563: error: <identifier> expected
		System.out.println("Correct tune: "+ tuneAccuracy + " ");
		                  ^
hw3\Deep.java:563: error: illegal start of type
		System.out.println("Correct tune: "+ tuneAccuracy + " ");
		                   ^
hw3\Deep.java:563: error: ')' expected
		System.out.println("Correct tune: "+ tuneAccuracy + " ");
		                                   ^
hw3\Deep.java:563: error: ';' expected
		System.out.println("Correct tune: "+ tuneAccuracy + " ");
		                                    ^
hw3\Deep.java:563: error: illegal start of type
		System.out.println("Correct tune: "+ tuneAccuracy + " ");
		                                                  ^
hw3\Deep.java:563: error: <identifier> expected
		System.out.println("Correct tune: "+ tuneAccuracy + " ");
		                                                   ^
hw3\Deep.java:563: error: ';' expected
		System.out.println("Correct tune: "+ tuneAccuracy + " ");
		                                                       ^
hw3\Deep.java:565: error: illegal start of type
		if(tuneAccuracy > 0.5)
		^
hw3\Deep.java:565: error: <identifier> expected
		if(tuneAccuracy > 0.5)
		               ^
hw3\Deep.java:565: error: ';' expected
		if(tuneAccuracy > 0.5)
		                 ^
hw3\Deep.java:565: error: illegal start of type
		if(tuneAccuracy > 0.5)
		                     ^
hw3\Deep.java:565: error: <identifier> expected
		if(tuneAccuracy > 0.5)
		                      ^
hw3\Deep.java:566: error: ';' expected
		{
		 ^
hw3\Deep.java:568: error: <identifier> expected
			double accuracy = reportAccuracy(TestSet, TestLabel);
			               ^
hw3\Deep.java:569: error: <identifier> expected
			System.out.println("Done with test accuracy: " + accuracy);
			                  ^
hw3\Deep.java:569: error: illegal start of type
			System.out.println("Done with test accuracy: " + accuracy);
			                   ^
hw3\Deep.java:569: error: ')' expected
			System.out.println("Done with test accuracy: " + accuracy);
			                                              ^
hw3\Deep.java:569: error: ';' expected
			System.out.println("Done with test accuracy: " + accuracy);
			                                                ^
hw3\Deep.java:569: error: illegal start of type
			System.out.println("Done with test accuracy: " + accuracy);
			                                                         ^
hw3\Deep.java:569: error: <identifier> expected
			System.out.println("Done with test accuracy: " + accuracy);
			                                                          ^
hw3\Deep.java:569: error: ';' expected
			System.out.println("Done with test accuracy: " + accuracy);
			                                                           ^
hw3\Deep.java:574: error: class, interface, or enum expected
		System.out.print("Done with epoch: " + epoch + " ");
		^
hw3\Deep.java:583: error: class, interface, or enum expected
		}
		^
hw3\Deep.java:589: error: class, interface, or enum expected
public double sigmoid(double x)
       ^
hw3\Deep.java:592: error: class, interface, or enum expected
}
^
hw3\Deep.java:594: error: class, interface, or enum expected
public double ReLuPrime(double x)
       ^
hw3\Deep.java:597: error: class, interface, or enum expected
}
^
hw3\Deep.java:599: error: class, interface, or enum expected
public double sigmoidPrime(double output)
       ^
hw3\Deep.java:602: error: class, interface, or enum expected
}
^
hw3\Deep.java:608: error: class, interface, or enum expected
		for (int z = 0; z < trainfeatureVectors.size(); z++) {
		^
hw3\Deep.java:608: error: class, interface, or enum expected
		for (int z = 0; z < trainfeatureVectors.size(); z++) {
		                ^
hw3\Deep.java:608: error: class, interface, or enum expected
		for (int z = 0; z < trainfeatureVectors.size(); z++) {
		                                                ^
hw3\Deep.java:609: error: class, interface, or enum expected
			for (int i = 0; i < imageSize; i++)
			                ^
hw3\Deep.java:609: error: class, interface, or enum expected
			for (int i = 0; i < imageSize; i++)
			                               ^
hw3\Deep.java:610: error: class, interface, or enum expected
				for (int j = 0; j < imageSize; j++) {
				                ^
hw3\Deep.java:610: error: class, interface, or enum expected
				for (int j = 0; j < imageSize; j++) {
				                               ^
hw3\Deep.java:614: error: class, interface, or enum expected
				}
				^
hw3\Deep.java:616: error: class, interface, or enum expected
		}
		^
hw3\Deep.java:622: error: class, interface, or enum expected
		for(int j = 0; j< set.length; j++)
		^
hw3\Deep.java:622: error: class, interface, or enum expected
		for(int j = 0; j< set.length; j++)
		               ^
hw3\Deep.java:622: error: class, interface, or enum expected
		for(int j = 0; j< set.length; j++)
		                              ^
hw3\Deep.java:625: error: class, interface, or enum expected
			double max = Double.NEGATIVE_INFINITY;
			^
hw3\Deep.java:626: error: class, interface, or enum expected
			double maxIndex = -1;
			^
hw3\Deep.java:627: error: class, interface, or enum expected
			for(int z = 0; z<rst.length;z++)
			^
hw3\Deep.java:627: error: class, interface, or enum expected
			for(int z = 0; z<rst.length;z++)
			               ^
hw3\Deep.java:627: error: class, interface, or enum expected
			for(int z = 0; z<rst.length;z++)
			                            ^
hw3\Deep.java:632: error: class, interface, or enum expected
					maxIndex = z;
					^
hw3\Deep.java:633: error: class, interface, or enum expected
				}
				^
hw3\Deep.java:640: error: class, interface, or enum expected
		}
		^
hw3\Deep.java:642: error: class, interface, or enum expected
}
^
50 errors
